fixed align center

--- a/packages/ui/Styles/Molecules/bottomMenu.module.css
+++ b/packages/ui/Styles/Molecules/bottomMenu.module.css
@@ -3,10 +3,24 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: var(--bottomMenu-height);
+    height: 80px;
     background-color: white;
 }
 
 .bottomMenuContentWrap {
-    
+    display: grid;
+    grid-template-columns: auto 1fr 160px;
+    align-items: center;
+    margin: auto;
+    max-width: 320px;
+    height: 100%;
+}
+
+#iconContainer {
+    grid-area: 1/1;
+}
+
+#btnWrap {
+    grid-area: 1/3;
+    height: min-content;
 }
